Traduction plugin, correction bugs et alignements, lien page video

--- a/StreamClass/wwwroot/css/site.css
+++ b/StreamClass/wwwroot/css/site.css
@@ -125,3 +125,8 @@ body {
 .pl-ziro {
     padding-left: 0px;
 }
+
+.user {
+    color: #ABABAB;
+    font-weight: 400;
+}
